[tool.poetry]
name = "hier-config"
version = "2.0.3"
description = "A network configuration comparison tool, used to build remediation configurations."
packages = [
    { include="hier_config", from="."},
]
authors = [
    "Andrew Edwards <andrew.edwards@rackspace.com>",
    "James Williams <james.williams@networktocode.com",
    "Jan Brooks <jan.brooks@rackspace.com"
]
license = "MIT"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators",
    "Intended Audience :: Telecommunications Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    # "Programming Language :: Python :: 3.10",
    "Natural Language :: English",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Networking",
]
[tool.poetry.dependencies]
python = "^3.8"
PyYAML = "^5.4.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2.3"
mypy = "^0.812"
pylint = "^2.7.4"
pytest-cov = "^2.11.1"
pytest-black = "^0.3.12"
pytest-runner = "^5.3.0"
pytest-flake8 = "^1.0.7"
mkdocs = "^1.2.2"
mkdocs-include-markdown-plugin = "^3.2.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
