[tool.poetry]
name = "hier-config"
version = "2.3.0"
description = "A network configuration comparison tool, used to build remediation configurations."
packages = [
    { include="hier_config", from="."},
]
authors = [
    "Andrew Edwards <edwards.andrew@heb.com>",
    "James Williams <james.williams@networktocode.com",
    "Jan Brooks <jan.brooks@rackspace.com"
]
license = "MIT"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators",
    "Intended Audience :: Telecommunications Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    # "Programming Language :: Python :: 3.10",
    "Natural Language :: English",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Networking",
]
[tool.poetry.dependencies]
python = ">=3.8.1,<4.0"
PyYAML = ">= 5.4"
types-pyyaml = "^6.0.12.12"

[tool.poetry.group.dev.dependencies]
black = "^23.12.1"
flake8 = "^7.0.0"
pytest = "^7.4.4"
mypy = "^1.8.0"
pylint = "^3.0.3"
pytest-cov = "^4.1.0"
pytest-black = "^0.3.12"
pytest-runner = "^6.0.1"
mkdocs = "^1.5.3"
mkdocs-include-markdown-plugin = "^6.0.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
